Added Bulma and font-awesome for readability

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
 
-<h1 style="text-align: center;">Jordan Pectyo's Resume Site</h1> 
+<h1 class = "title is-1 has-text-centered">Jordan Pectyo's Resume Site</h1> 
 <section id="introduction">
-  <h2 style="text-align: center;"> What is this for?</h2>
-  <p style="text-align: center;">To be quite honest this is just my way of toying around in Angular and making a simple demo out of each concept.
+  <h2 class = "subtitle is-1 has-text-centered"> What is this for?</h2>
+  <p class = "has-text-centered">To be quite honest this is just my way of toying around in Angular and making a simple demo out of each concept.
     <br> It saves you time to see features clearly labelled and showing what to look for, as opposed to digging for that one promise in a service call.
   </p>
-  <h2 style="text-align: center;"> Why isn't this pretty?</h2>
-  <p style="text-align: center;">Currently I'm only doing modest styling, otherwise I'll never complete anything here. As I get time I'll try and add images + styling.
+  <h2 class = "subtitle is-1 has-text-centered"> Why isn't this pretty?</h2>
+  <p class = "has-text-centered">Currently I'm only doing modest styling, otherwise I'll never complete anything here. As I get time I'll try and add images + styling.
     <br> If you are looking for a better answer, just consider this a trip down memory lane back to the 90's.
+    <i class="fa fa-camera-retro" aria-hidden="true"></i>
   </p>
 </section>
