--- a/src/app/core/sample/sample.component.html
+++ b/src/app/core/sample/sample.component.html
@@ -1,3 +1,5 @@
-<p>
-  sample works!
-</p>
+<div class="container">
+  <h1 class="subtitle is-1 has-text-centered">
+    Sample Page Works!
+  </h1>
+</div>
